# momo

./: .gitignore  CONTRIBUTING.md  Cargo.toml
apps/momo-android/: Cargo.toml  run_on_device.sh  stop_on_device.sh
apps/momo-android/src/: lib.rs
apps/momo-greeter/: Cargo.toml  README.md
apps/momo-greeter/src/: configuration.rs  lib.rs  main.rs
apps/momo-greeter/src/configuration/: tests.rs
apps/momo-shell/: Cargo.toml
apps/momo-shell/src/: configuration.rs  lib.rs  main.rs
apps/momo-shell/src/configuration/: tests.rs
crates/momo-app/: Cargo.toml
crates/momo-app/src/: application.rs  lib.rs  model.rs  shell_surface.rs
crates/momo-app/src/application/: tests.rs
crates/momo-app/src/shell_surface/: tests.rs
crates/momo-compositor/: Cargo.toml
crates/momo-compositor/src/: backend.rs  lib.rs  model.rs
crates/momo-compositor/src/model/: tests.rs
crates/momo-greetd/: Cargo.toml
crates/momo-greetd/src/: lib.rs  tests.rs
crates/momo-greeter-lib/: Cargo.toml
crates/momo-greeter-lib/src/: auth.rs  lib.rs  users.rs
crates/momo-greeter-lib/src/components/: mod.rs
crates/momo-greeter-lib/src/components/login_screen/: mod.rs  state.rs  style.rs  tests.rs
crates/momo-greeter-lib/src/components/login_screen/action_button/: mod.rs  style.rs
crates/momo-greeter-lib/src/components/login_screen/clock/: mod.rs  state.rs  style.rs
crates/momo-greeter-lib/src/components/login_screen/login_panel/: mod.rs  style.rs
crates/momo-greeter-lib/src/components/login_screen/power_button/: mod.rs  style.rs
crates/momo-greeter-lib/src/components/login_screen/profile_tile/: mod.rs  style.rs
crates/momo-kit/: Cargo.toml
crates/momo-kit/src/: animation.rs  assets.rs  interaction.rs  lib.rs  style.rs
crates/momo-kit/src/components/: mod.rs  svg_icon.rs
crates/momo-kit/src/interaction/: button.rs  mod.rs  scroll_paging.rs  scroll_paging_tests.rs
crates/momo-tracing/: Cargo.toml
crates/momo-tracing/src/: lib.rs
crates/momo-ui/: Cargo.toml  README.md
crates/momo-ui/benches/: app_grid_paging.rs
crates/momo-ui/src/: app_state.rs  lib.rs
crates/momo-ui/src/components/: mod.rs
crates/momo-ui/src/components/dock/: layer_toggle.rs  mod.rs  style.rs
crates/momo-ui/src/components/dock/icon/: mod.rs  style.rs
crates/momo-ui/src/components/dock/overview_button/: mod.rs  style.rs
crates/momo-ui/src/components/home/: app_icon.rs  benchmark_support.rs  bluetooth.rs  compositor.rs  mod.rs  paging.rs  power.rs  session.rs  settings_button.rs  settings_menu.rs  state.rs  system_status.rs  tests.rs
crates/momo-ui/src/components/home/app_grid/: app_grid_viewport.rs  metrics.rs  mod.rs  page_dots.rs  state.rs  style.rs
crates/momo-ui/src/components/home/app_grid/page_dots/: liquid.rs  tests.rs
crates/momo-ui/src/components/home/app_tile/: mod.rs  style.rs
crates/momo-ui/src/components/home/bluetooth/: tests.rs
crates/momo-ui/src/components/home/clock_chip/: mod.rs  state.rs  style.rs
crates/momo-ui/src/components/home/header/: mod.rs  style.rs
crates/momo-ui/src/components/home/header/overview_title/: mod.rs  style.rs
crates/momo-ui/src/components/home/launch/: controller.rs  mod.rs  overlay.rs  style.rs
crates/momo-ui/src/components/home/model/: mod.rs
crates/momo-ui/src/components/home/overview/: mod.rs  state.rs  style.rs
crates/momo-ui/src/components/home/overview/apps_button/: mod.rs  style.rs
crates/momo-ui/src/components/home/overview/window_controls/: mod.rs  style.rs
crates/momo-ui/src/components/home/surface_layer_controller/: mod.rs  style.rs
crates/momo-ui/src/components/home/time/: mod.rs
crates/momo-ui/src/components/quick_settings/: common.rs  mod.rs  panel.rs  quick_action_button.rs  settings_tile_button.rs  state.rs  status_chip.rs  style.rs
crates/momo-ui/src/components/quick_settings/bluetooth_submenu/: mod.rs  style.rs
crates/momo-ui/src/components/quick_settings/main_menu/: mod.rs  style.rs  tile_grid.rs  tile_specs.rs  top_row.rs
crates/momo-ui/src/components/quick_settings/panel/: mod.rs  style.rs  tile_grid.rs
crates/momo-ui/src/components/quick_settings/power_submenu/: mod.rs  style.rs
crates/momo-ui/src/components/quick_settings/quick_action_button/: mod.rs  style.rs
crates/momo-ui/src/components/quick_settings/settings_tile_button/: mod.rs  style.rs
crates/momo-ui/src/components/quick_settings/status_chip/: mod.rs  style.rs
crates/momo-ui/src/components/quick_settings/submenu/: mod.rs  style.rs
crates/momo-ui/src/components/quick_settings/submenu_button/: mod.rs  style.rs
crates/momo-ui/src/components/quick_settings/volume_control/: mod.rs  style.rs
crates/momo-ui/src/components/slider/: mod.rs  style.rs  tests.rs
crates/momo-ui/src/components/view_transition/: mod.rs  state.rs  style.rs
crates/momo-wayfire/: Cargo.toml
crates/momo-wayfire/src/: backend.rs  client.rs  lib.rs  protocol.rs  tests.rs
crates/momo-wayfire/src/binding/: mod.rs  tests.rs
crates/system-control/: Cargo.toml
crates/system-control/src/: battery.rs  bluetooth.rs  feature_state.rs  lib.rs  power.rs  session.rs  users.rs  volume.rs
crates/system-control/src/platform/: linux.rs  linux_system.rs  mod.rs  system_stub.rs
crates/system-control/src/platform/linux/: dbus.rs  device.rs  login1.rs  loginctl.rs  mod.rs  power.rs  session.rs  systemctl.rs  users.rs
crates/system-control/src/platform/linux/battery/: handle.rs  mod.rs  runtime.rs  state.rs  sysfs.rs
crates/system-control/src/platform/linux/bluetooth/: command.rs  device.rs  device_category.rs  events.rs  handle.rs  mod.rs  runtime.rs  state.rs  store.rs  tests.rs
crates/system-control/src/platform/linux/volume/: handle.rs  mod.rs  pipewire.rs  runtime.rs  state.rs
crates/system-control/src/platform/stub/: battery.rs  bluetooth.rs  mod.rs  power.rs  session.rs  users.rs  volume.rs
tmp/greetd-wayfire-greeter/: README.md  install.sh
tmp/greetd-wayfire-greeter/greetd/: config.toml
tmp/greetd-wayfire-greeter/libexec/: momo-greeter-wayfire  momo-shell-session  momo-shell-wayfire
tmp/greetd-wayfire-greeter/wayfire/: momo-shell.ini  wayfire.ini
(+3 files in other folders)
