[workspace]
members = [
    "apps/momo-shell",
    "apps/momo-android",
    "crates/momo-app",
    "crates/momo-compositor",
    "crates/system-control",
    "crates/momo-ui",
    "crates/momo-kit",
    "crates/momo-tracing",
    "crates/momo-greeter-lib",
    "crates/momo-greetd",
    "crates/momo-wayfire",
    "apps/momo-greeter",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
daiko = { path = "../daiko/crates/daiko" }
momo-app = { path = "crates/momo-app" }
momo-compositor = { path = "crates/momo-compositor" }
momo-kit = { path = "crates/momo-kit" }
momo-tracing = { path = "crates/momo-tracing" }
momo-ui = { path = "crates/momo-ui" }
momo-wayfire = { path = "crates/momo-wayfire" }
system-control = { path = "crates/system-control" }
thiserror = "2.0.17"
tracing = "0.1.44"

[workspace.lints.clippy]
all = "deny"
redundant-clone = "deny"
bind_instead_of_map = "deny"
bool_assert_comparison = "deny"
cloned_instead_of_copied = "deny"
clone_on_ref_ptr = "deny"
explicit_into_iter_loop = "deny"
implicit_clone = "deny"
inefficient_to_string = "deny"
manual_instant_elapsed = "deny"
manual_is_variant_and = "deny"
manual_string_new = "deny"
match_bool = "deny"
needless_for_each = "deny"
needless_raw_string_hashes = "deny"
needless_raw_strings = "deny"
non_std_lazy_statics = "deny"
option_as_ref_cloned = "deny"
precedence_bits = "deny"
redundant_clone = "deny"
redundant_closure_for_method_calls = "deny"
ref_binding_to_reference = "deny"
return_and_then = "deny"
unseparated_literal_suffix = "deny"
suspicious_operation_groupings = "deny"
trait_duplication_in_bounds = "deny"
unchecked_time_subtraction = "deny"
unnecessary_join = "deny"
unnecessary_struct_initialization = "deny"
unnested_or_patterns = "deny"
use_self = "deny"
