[package]
name = "momo-shell"
version.workspace = true
edition.workspace = true

[dependencies]
momo-app = { path = "../../crates/momo-app" }
momo-ui = { path = "../../crates/momo-ui" }
momo-wayfire = { path = "../../crates/momo-wayfire" }
system-control = { path = "../../crates/system-control" }
daiko = { workspace = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
log = "0.4.29"
