[package]
name = "momo-shell"
version.workspace = true
edition.workspace = true

[dependencies]
daiko.workspace = true
momo-app.workspace = true
momo-tracing.workspace = true
momo-ui.workspace = true
momo-wayfire.workspace = true
system-control.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
dailand = { path = "../../../daiko/crates/dailand" }

[lints]
workspace = true
