[package]
name = "momo-greeter-lib"
version.workspace = true
edition.workspace = true

[dependencies]
daiko.workspace = true
momo-greetd = { path = "../momo-greetd" }
momo-kit = { path = "../momo-kit" }
system-control = { path = "../system-control" }
thiserror = "2.0.17"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing = "0.1.44"

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2.0"

[lints]
workspace = true
