[package]
name = "momo-greeter-lib"
version.workspace = true
edition.workspace = true

[dependencies]
daiko.workspace = true
momo-greetd = { path = "../momo-greetd" }
momo-kit = { path = "../momo-kit" }
system-control = { path = "../system-control" }
thiserror = "2.0.17"
tracing = "0.1.44"

[lints]
workspace = true
