[package]
name = "momo-greeter-lib"
version.workspace = true
edition.workspace = true

[dependencies]
daiko.workspace = true
momo-greetd = { path = "../momo-greetd" }
momo-kit.workspace = true
system-control.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
