[package]
name = "momo-tracing"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2.0"

[lints]
workspace = true
