[package]
name = "momo-ui"
version.workspace = true
edition.workspace = true

[features]
bench-support = []

[dependencies]
daiko.workspace = true
momo-app = { path = "../momo-app" }
momo-kit = { path = "../momo-kit" }
system-control = { path = "../system-control" }
tracing = "0.1.44"
appkeeper = { path = "../../../appkeeper" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "app_grid_paging"
harness = false
required-features = ["bench-support"]

[lints]
workspace = true
