[package]
name = "momo-ui"
version.workspace = true
edition.workspace = true

[features]
bench-support = []

[dependencies]
appkeeper = { path = "../../../appkeeper" }
daiko.workspace = true
momo-app.workspace = true
momo-compositor.workspace = true
momo-kit.workspace = true
system-control.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "app_grid_paging"
harness = false
required-features = ["bench-support"]

[lints]
workspace = true
