[package]
name = "momo-wayfire"
version.workspace = true
edition.workspace = true

[dependencies]
bytes = "1.10"
futures-util = { version = "0.3", features = ["sink"] }
momo-compositor.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing.workspace = true

[dev-dependencies]
tempfile = "3.20"

[lints]
workspace = true
